--- a/Procedural Generation/Procedural Generation.Editor.csproj
+++ b/Procedural Generation/Procedural Generation.Editor.csproj
@@ -139,6 +139,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\CellularAutomataEditor.cs" />
+    <Compile Include="Assets\Editor\GrammarDungeonEditor.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
