--- a/Procedural Generation/Procedural Generation.Editor.csproj
+++ b/Procedural Generation/Procedural Generation.Editor.csproj
@@ -141,6 +141,9 @@
     <Compile Include="Assets\Editor\CellularAutomataEditor.cs" />
     <Compile Include="Assets\Editor\GrammarDungeonEditor.cs" />
   </ItemGroup>
+  <ItemGroup>
+    <None Include="Assets\Grammar Dungeon Hard Coded Starting Layout.txt" />
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <Target Name="GenerateTargetFrameworkMonikerAttribute" />
 </Project>
