Dungeons can now be evaluated...yay...
Not actual yay. This was a nightmare to do. Oh god.

--- a/Procedural Generation/Procedural Generation.Editor.csproj
+++ b/Procedural Generation/Procedural Generation.Editor.csproj
@@ -289,6 +289,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Assets\Editor\CellularAutomataEditor.cs" />
+    <Compile Include="Assets\Editor\DungeonEvaluationEditor.cs" />
     <Compile Include="Assets\Editor\GrammarDungeonEditor.cs" />
   </ItemGroup>
   <ItemGroup>
